--- a/index.html
+++ b/index.html
@@ -1,61 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
     <title>Chinese Farmer</title>
 </head>
-<body>
+	<title>Chinesse Farmer</title>
+	<link rel="stylesheet" type="text/css" href="index.css">
+
+<body class="box1">
+
 <h1>The Story of the Chinese Farmer</h1>
 
-<q>11 may 2016, Alexandre Gorius</q>
+<cite>11 may 2016, Alexandre Gorius</cite>
 
-[ Image : https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg ]
+<figure>
+	<img src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg"  alt="drunk guy">
+	<figcaption>
+		<h4>God or Bad?</h4>
+	</figcaption>
+</figure>
 
-
+<section>
 <h2>Preamble</h2>
-- read this once
-- then read it again
-- then tell it to your best friend
+<ul>
+	<li>Read this once</li>
+	<li>Read this again</li>
+	<li>Then tell it to your best friend</li>
+</ul>
+</section>
 
+<section>
 <h2>The story</h2>
 
-Once upon a time there was a Chinese farmer whose horse ran away. That evening, all of his neighbors came around to commiserate. They said, “We are so sorry to hear your horse has run away. This is most unfortunate.” The farmer said, “Maybe.” The next day the horse came back bringing seven wild horses with it, and in the evening everybody came back and said, “Oh, isn’t that lucky. What a great turn of events. You now have eight horses!” The farmer again said, “Maybe.”
+	<p><b>Once upon a time there was a Chinese farmer whose horse ran away. That evening, all of his neighbors came around to commiserate. They said, <q>We are so sorry to hear your horse has run away. This is most unfortunate.</q> The farmer said,<q><strong>Maybe.</strong></q> The next day the horse came back bringing seven wild horses with it, and in the evening everybody came back and said, <q>Oh, isn’t that lucky. What a great turn of events. You now have eight horses!</q> The farmer again said, <q><strong>Maybe.</strong></q></b></p>
 
-The following day his son tried to break one of the horses, and while riding it, he was thrown and broke his leg. The neighbors then said, “Oh dear, that’s too bad,” and the farmer responded, “Maybe.” The next day the conscription officers came around to conscript people into the army, and they rejected his son because he had a broken leg. Again all the neighbors came around and said, “Isn’t that great!” Again, he said, “Maybe.”
+	<p>The following day his son tried to break one of the horses, and while riding it, he was thrown and broke his leg. The neighbors then said <q>Oh dear, that’s too bad,</q> and the farmer responded,<q><strong>Maybe.</strong></q> The next day the conscription officers came around to conscript people into the army, and they rejected his son because he had a broken leg. Again all the neighbors came around and said, <q>Isn’t that great!</q> Again, he said, <q><strong> Maybe.</strong></q></p>
 
-The whole process of nature is an integrated process of immense complexity, and it’s really impossible to tell whether anything that happens in it is good or bad — because you never know what will be the consequence of the misfortune; or, you never know what will be the consequences of good fortune.
-
-Alan Watts
-
-
-----
-
-Here is this dialog in the form of a table
-
-+-------------------+---------------------+
-|                   |                     |
-| Event             |  Good or Bad ?      |
-+-------------------+---------------------+
-|                   |                     |
-| Lose a horse      |  Maybe              |
-+-------------------+---------------------+
-|                   |                     |
-| Win more horses   |  Maybe              |
-+-------------------+---------------------+
-|                   |                     |
-| Son injury        |  Maybe              |
-+-------------------+---------------------+
-|                   |                     |
-| Avoid war	       |  Maybe              |
-+-------------------+---------------------+
-Table representing the farmer's philosophy.
+	<blockquote><p>The whole process of nature is an integrated process of immense complexity, and it’s really impossible to tell whether anything that happens in it is good or bad — because you never know what will be the consequence of the misfortune; or, you never know what will be the consequences of good fortune.</p></blockquote>
+	<a rel="author" href="https://www.alanwatts.org/life-of-alan-watts/" target="_blank" title="Meet the writer">Alan Watts</a>
 
 
-Conclusion
-Good and Bad are just one perspective. Bananas are good for monkeys, but monkeys are not good for bananas. Let's not make a big deal out of it...
 
-----
-Copyright Just Another Company 2017. All right reserved. Adapted from this article: https://wellsbaum.blog/2018/01/27/alan-watts-the-story-of-the-chinese-farmer/
+</section>
+
+<section>
+<figure class="table">
+	<table><caption><h2>Farmer's Philosophy</h2></caption>
+		<colgroup>
+			<col class="column1" />
+			<col class="column2" />
+
+			<col class="column3-4" span="2" />
+		</colgroup>
+		<tr>
+			<th>Event</th>
+			<th><em class="good">Good</em> and <em class="bad">Bad</em></th>
+		</tr>
+		<tr>
+			<td>Lose a horse</td>
+			<td>Maybe</td>
+		</tr>
+
+		<tr>
+			<td>Son injury</td>
+			<td>Maybe</td>
+		</tr>
+
+		<tr>
+			<td>Avoid war</td>
+			<td>Maybe</td>
+		</tr>
+	</table>
+	<figcaption><h4>Table representing the farmer's philosophy</h4></figcaption>
+</figure>
+
+</section>
+
+<section>
+	<h2>Conclusion</h2>
+	<p><em class="good">Good</em> and <em class="bad">Bad</em> are just one perspective. Bananas are good for monkeys, but monkeys are not good for bananas. Let's not make a big deal out of it...</p>
+</section>
+
+<footer class="footer">
+	<p>Copyright <a href="http://www.justanothercompany.de" target="_blank" title="fun place to work"> Just Another Company 2017.</a> All right reserved. Adapted from <a href="https://wellsbaum.blog/alan-watts-story-of-the-chinese-farmer/" target="_blank" title="Reference link">this article</a> </p>
+</footer>
 
 
 </body>
